[package]
name = "page-hunter"
version = "0.1.0"
authors = ["ECHibiki <ecverniy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
scraper = "0.12.0"
sqlite =  "0.26.0"
url =  " 2.2.2"